--- a/style.css
+++ b/style.css
@@ -110,13 +110,18 @@ h1 {
 	font-weight: 400;
 	letter-spacing: 1px;
 }
+@media (max-width: 768px){
+	main {
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
 @media (max-width: 375px) {
 	main {
 		grid-template-columns: 1fr;
 		grid-template-rows: auto;
 	}
 	.card {
-		width: 90%;
+		width: 90px;
 		height: auto;
 		margin-bottom: 30px;
 	}
